--- a/descricaoMasculina/descricaoMascCanoCurto.html
+++ b/descricaoMasculina/descricaoMascCanoCurto.html
@@ -134,7 +134,7 @@
             <div class="linhaUm-Descricao-do-produto"></div>
             <div class="linhaDois-Descricao-do-produto"></div>
             <div class="texto-Descricao">
-                <p id="descricao">As meias de cano curto são perfeitas para quem busca estilo e conforto no dia a dia. Feitas de material respirável e macio, elas proporcionam um ajuste ideal para os pés, mantendo-os secos e confortáveis durante todo o uso. Disponíveis em uma variedade de estampas criativas e vibrantes, essas meias são ideais para adicionar um toque de personalidade ao seu visual.</p>
+                <p id="Textodescricao">As meias de cano curto são perfeitas para quem busca estilo e conforto no dia a dia. Feitas de material respirável e macio, elas proporcionam um ajuste ideal para os pés, mantendo-os secos e confortáveis durante todo o uso. Disponíveis em uma variedade de estampas criativas e vibrantes, essas meias são ideais para adicionar um toque de personalidade ao seu visual.</p>
                 <div class="elementosDoTexto-Descricao">
                     <p>• Algodão 60% </p>
                     <p>• Poliamida 28% </p>
