--- a/socialMasculina.html
+++ b/socialMasculina.html
@@ -72,13 +72,14 @@
                         <p>Adulto Feminino</p>
                         <div class="submenuItem">
                             <div><a href="proFeminino.html">Pró</a>
-                            <a href="CanoCurtoCasualFem.html">Casual</a>
-                            <a href="babyDesFem.html">Baby Desenhada</a>
-                            <a href="CanoLongoFem.html">Casual Cano Longo</a></div>
+                                <a href="CanoCurtoCasualFem.html">Casual</a>
+                                <a href="babyDesFem.html">Baby Desenhada</a>
+                                <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                            </div>
                             <div><a href="babyColorsFem.html">Baby Color’s</a>
-                            <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
-                            <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
-                            <a href="kidsFem.html">Kids</a>
+                                <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                                <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                                <a href="kidsFem.html">Kids</a>
                             </div>
                         </div>
                     </div>
@@ -94,11 +95,13 @@
                                 <a href="#">Casual</a>
                                 <a href="babyDesMasc.html">Baby Desenhada</a>
                                 <a href="#">Casual Cano Longo</a>
-                                <a href="#">Cano Curto / Cano Curto Desenhada</a></div>
-                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
+                                <a href="#">Cano Curto / Cano Curto Desenhada</a>
+                            </div>
+                            <div><a href="babyColorsMasc.html">Baby Color’s</a>
                                 <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
                                 <a href="kidsMas.html">Kids</a>
-                                <a href="#">Juvenil</a></div>
+                                <a href="#">Juvenil</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -111,107 +114,114 @@
             <h1 class="titulo">Social Masculina</h1>
             <div class="todas-as-meias-des-masc">
 
-                <div class="Quadrado-da-meia-quadriculada-laranja" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProQuadriculadoLaranja01.png" alt="Meia Pró Quadriculado Laranja Masculina">
+                <div class="Quadrado-da-meia-social-desenhada-AzulMarinho" id="div-meia">
+                    <div class="container"> <img src="img-masculino/SocialDesenhada-AzulMarinho-Lateral.png"
+                            alt="Meia Social Azul Marinho Desenhada Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Quadriculado Laranja Masculina</h3>
+                        <h3 class="Subtitulo">Meia Social Azul Marinho Desenhada Masculina</h3>
                         <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-laranja-pro">
-                            <div class="laranjaPro"></div>
+                        <div class="corDesenhada-01">
+                            <div class="DesenhadoAzulMarinho"> <p>1</p> </div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 5,90</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+                <div class="Quadrado-da-meia-social-desenhada-Preta" id="div-meia">
+                    <div class="container"> <img src="img-masculino/SocialDesenhada-Preta-Lateral.png"
+                            alt="Meia Social Preta Desenhada Masculina">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Social Preta Desenhada Masculina</h3>
+                        <h3 class="numeracao">39 á 44</h3>
+                        <div class="corDesenhada-02">
+                            <div class="DesenhadaPreta"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 5,90</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+                <div class="Quadrado-da-meia-social-desenhada-Cinza" id="div-meia">
+                    <div class="container"> <img src="img-masculino/SocialDesenhada-Cinza-Lateral.png"
+                            alt="Meia Social Cinza Desenhada Masculina">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Social Cinza Desenhada Masculina</h3>
+                        <h3 class="numeracao">39 á 44</h3>
+                        <div class="corDesenhada-03">
+                            <div class="DesenhadaCinza"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 5,90</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-quadriculada-branca" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProQuadriculadoBranco01.png" alt="Meia Pró Quadriculado Branca Masculina">
+                <div class="Quadrado-da-meia-social-lisa-Preta" id="div-meia">
+                    <div class="container"> <img src="img-masculino/SocialPreta-Lateral.png"
+                            alt="Meia Social Lisa Preta Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Quadriculado Branca Masculina</h3>
+                        <h3 class="Subtitulo">Meia Social Lisa Preta Masculina</h3>
                         <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-branca-pro">
-                            <div class="brancaPro"></div>
+                        <div class="corLisa-01">
+                            <div class="LisaPreta"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 5,80</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-faixa-vermelha" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProFaixaVermelha01.png" alt="Meia Pró Faixa Vermelha Masculina">
+                <div class="Quadrado-da-meia-social-lisa-AzulMarinho" id="div-meia">
+                    <div class="container"> <img src="img-masculino/Social-AzulMarinho-Atras.png"
+                            alt="Meia Pró Faixa Vermelha Masculina">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Pró Faixa Vermelha Masculina</h3>
                         <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-vermelha-pro">
-                            <div class="vermelhaPro"></div>
+                        <div class="corLisa-02">
+                            <div class="LisaAzulMarinho"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 5,80</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-faixa-amarela" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProFaixaAmarela01.png" alt="Meia Pró Faixa Amarela Masculina">
+                <div class="Quadrado-da-meia-social-lisa-Cinza" id="div-meia">
+                    <div class="container"> <img src="img-masculino/Social-Cinza-Lateral.png"
+                            alt="Meia Social Cinza Lisa Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Faixa Amarela Masculina</h3>
+                        <h3 class="Subtitulo">Meia Social Cinza Lisa Masculina</h3>
                         <h3 class="numeracao">39 á 44</h3>
                         <div class="cores-amarela-pro">
                             <div class="amarelaPro"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 5,80</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-degrade-azul" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProDegradeAzul01.png" alt="Meia Pró Degradê Azul Masculina">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Degradê Azul Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-azul-pro">
-                            <div class="azulPro"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
 
-                <div class="Quadrado-da-meia-degrade-verde" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProDegradeVerde01.png" alt="Meia Pró Degradê Verde Masculina">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Degradê Verde Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-verde-pro">
-                            <div class="verdePro"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
+
             </div>
         </section>
     </main>
