--- a/juvenilMasculina.html
+++ b/juvenilMasculina.html
@@ -473,7 +473,7 @@
         document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, .cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisa-pretaLisa-cinzaLisa div, .cores-branca-preta-cinzakit div, .cores-branca-preta-cinzaDiversa div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisa-pretaLisa-cinzaLisa div, .cores-branca-preta-cinzakit div, .cores-branca-preta-cinzaDiversa div').forEach(c => {
+                document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisa-pretaLisa-cinzaLisa div, .cores-branca-preta-cinzakit div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
