--- a/juvenilMasculina.html
+++ b/juvenilMasculina.html
@@ -14,99 +14,100 @@
             <div class="imagemLogo">
                 <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
             </div>
+            <div class="menu-icon" id="menuIcon">&#9776;</div>
+            <nav class="cabecalho2">
+                <div class="menu-item">
+                    <a href="" class="item">Baby Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Feminino</p>
+                            <div class="submenuItem">
+                                <a href="babyDesFem.html">Baby Feminina Desenhada</a>
+                                <a href="babyColorsFem.html">Baby Feminina Color’s</a>
+                                <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Baby Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Masculina</p>
+                            <div class="submenuItem">
+                                <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
+                                <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
+                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Feminina</p>
+                            <div class="submenuItem">
+                                <a href="kidsFem.html">Kids Feminina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Masculina</p>
+                            <div class="submenuItem">
+                                <a href="kidsMas.html">Kids Masculina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Feminino</p>
+                            <div class="submenuItem">
+                                <div><a href="proFeminino.html">Pró</a>
+                                    <a href="CanoCurtoCasualFem.html">Casual</a>
+                                    <a href="babyDesFem.html">Baby Desenhada</a>
+                                    <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                                </div>
+                                <div><a href="babyColorsFem.html">Baby Color’s</a>
+                                    <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                                    <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsFem.html">Kids</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Masculino</p>
+                            <div class="submenuItem">
+                                <div><a href="proMasculina.html">Pró</a>
+                                    <a href="babyDesMasc.html">Baby Desenhada</a>
+                                    <a href="esportivaMasc.html">Esportiva</a>
+                                    <a href="socialMasculina.html">Social</a>
+                                    <a href="canoCurto-masculino.html">Cano Curto / Cano Curto Desenhada</a>
+                                </div>
+                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
+                                    <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsMas.html">Kids</a>
+                                    <a href="juvenilMasculina.html">Juvenil</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <div class="linha"></div>
-        <nav class="cabecalho2">
-            <div class="menu-item">
-                <a href="" class="item">Baby Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Feminino</p>
-                        <div class="submenuItem">
-                            <a href="babyDesFem.html">Baby Feminina Desenhada</a>
-                            <a href="babyColorsFem.html">Baby Feminina Color’s</a>
-                            <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Baby Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Masculina</p>
-                        <div class="submenuItem">
-                            <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
-                            <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
-                            <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Feminina</p>
-                        <div class="submenuItem">
-                            <a href="kidsFem.html">Kids Feminina</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Masculina</p>
-                        <div class="submenuItem">
-                            <a href="kidsMas.html">Kids Masculina</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Feminino</p>
-                        <div class="submenuItem">
-                            <div><a href="proFeminino.html">Pró</a>
-                                <a href="CanoCurtoCasualFem.html">Casual</a>
-                                <a href="babyDesFem.html">Baby Desenhada</a>
-                                <a href="CanoLongoFem.html">Casual Cano Longo</a>
-                            </div>
-                            <div><a href="babyColorsFem.html">Baby Color’s</a>
-                                <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
-                                <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
-                                <a href="kidsFem.html">Kids</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Masculino</p>
-                        <div class="submenuItem">
-                            <div><a href="">Pró</a>
-                                <a href="#">Casual</a>
-                                <a href="babyDesMasc.html">Baby Desenhada</a>
-                                <a href="#">Casual Cano Longo</a>
-                                <a href="#">Cano Curto / Cano Curto Desenhada</a>
-                            </div>
-                            <div><a href="babyColorsMasc.html">Baby Color’s</a>
-                                <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
-                                <a href="kidsMas.html">Kids</a>
-                                <a href="#">Juvenil</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div class="linha" id="linha"></div>
     </header>
 
     <main>
@@ -240,10 +241,10 @@
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Cano Curto - Lisa Juvenil</h3>
                         <h3 class="numeracao">34 á 38</h3>
-                        <div class="cores-brancaLisa-pretaLisa-cinzaLisa">
-                            <div class="brancaLisa"></div>
-                            <div class="pretaLisa"></div>
-                            <div class="cinzaLisa"></div>
+                        <div class="cores-brancaLisajuv-pretaLisajuv-cinzaLisajuv">
+                            <div class="brancaLisajuv"></div>
+                            <div class="pretaLisajuv"></div>
+                            <div class="cinzaLisajuv"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -261,9 +262,9 @@
                         <h3 class="Subtitulo">Meia Cano Curto Lisa Juvenil Preta - Kit 3 pares</h3>
                         <h3 class="numeracao">34 á 38</h3>
                         <div class="cores-branca-preta-cinzakit">
-                            <div class="pretaKit01"></div>
-                            <div class="brancaKit01"></div>
-                            <div class="cinzaKit01"></div>
+                            <div class="pretaKit01Juv"></div>
+                            <div class="brancaKit01Juv"></div>
+                            <div class="cinzaKit01Juv"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -401,14 +402,14 @@
                 royalVer: 'img-juvenil/royal-vermelho.png',
             },
             'Quadrado-da-meia-esportiva-cano-curto': {
-                brancaLisa: 'img-juvenil/lisa-branca.png',
-                pretaLisa: 'img-juvenil/lisa-preta.png',
-                cinzaLisa: 'img-juvenil/lisa-cinza.png',
+                brancaLisajuv: 'img-juvenil/lisa-branca.png',
+                pretaLisajuv: 'img-juvenil/lisa-preta.png',
+                cinzaLisajuv: 'img-juvenil/lisa-cinza.png',
             },
             'Quadrado-da-meia-esportiva-kit01': {
-                brancaKit01: 'img-juvenil/kit-branca.png',
-                pretaKit01: 'img-juvenil/kit-preta.png',
-                cinzaKit01: 'img-juvenil/kit-cinza.png',
+                brancaKit01Juv: 'img-juvenil/kit-branca.png',
+                pretaKit01Juv: 'img-juvenil/kit-preta.png',
+                cinzaKit01Juv: 'img-juvenil/kit-cinza.png',
             },
            
 
@@ -420,7 +421,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.juvenilMarrom, .juvenilPreta, .marinhoMotors, .cinzaMotors, .marinhoFut, .grafiteFut, .faixaMarinho , .faixaGrafite, .vermelhoDes, .verdeDes, .cinzaLar, .royalVer, .brancaLisa, .cinzaLisa, .pretaLisa, .pretaKit01, .cinzaKit01, .brancaKit01, .kitDiversa ');
+            const cores = quadrado.querySelectorAll('.juvenilMarrom, .juvenilPreta, .marinhoMotors, .cinzaMotors, .marinhoFut, .grafiteFut, .faixaMarinho , .faixaGrafite, .vermelhoDes, .verdeDes, .cinzaLar, .royalVer, .brancaLisajuv, .cinzaLisajuv, .pretaLisajuv, .pretaKit01Juv, .brancaKit01Juv, .cinzaKit01Juv, .kitDiversa ');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -470,10 +471,10 @@
 
         });
 
-        document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, .cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisa-pretaLisa-cinzaLisa div, .cores-branca-preta-cinzakit div, .cores-branca-preta-cinzaDiversa div').forEach(cor => {
+        document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, .cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisajuv-pretaLisajuv-cinzaLisajuv div, .cores-branca-preta-cinzakit div, .cores-branca-preta-cinzaDiversa div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisa-pretaLisa-cinzaLisa div, .cores-branca-preta-cinzakit div').forEach(c => {
+                document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisajuv-pretaLisajuv-cinzaLisajuv div, .cores-branca-preta-cinzakit div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
