--- a/descricaoFeminina/CanoLongo.html
+++ b/descricaoFeminina/CanoLongo.html
@@ -123,7 +123,7 @@
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco">gggg</h3>
                     <h3 class="numeracao"> 34 á 38</h3>
-                    <button class="btn-shopee"> Compre na shopee </button>
+                    <a href="https://shopee.com.br/maria_314#product_list"> <button class="btn-shopee"> Compre na Shoppe</button></a>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
