--- a/descricaoBaby/descricaobabyColorsmasc.html
+++ b/descricaoBaby/descricaobabyColorsmasc.html
@@ -123,7 +123,7 @@
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco"></h3>
                     <h3 class="numeracao" id="numeracao"></h3>
-                    <button class="btn-shopee"> Compre na Shopee</button>
+                    <a href="https://shopee.com.br/maria_314#product_list"> <button class="btn-shopee"> Compre na Shoppe</button></a>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
