--- a/juvenilMasculina.html
+++ b/juvenilMasculina.html
@@ -411,6 +411,9 @@
                 pretaKit01Juv: 'img-juvenil/kit-preta.png',
                 cinzaKit01Juv: 'img-juvenil/kit-cinza.png',
             },
+            'Quadrado-da-meia-esportiva-cano-curto-kit': {
+            kitDiversa: 'img-juvenil/kit-diversa.png',
+            },
            
 
 
