--- a/proMasculina.html
+++ b/proMasculina.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pró Masculina - Meias Sene</title>
     <link rel="stylesheet" href="esportvaMasc.css">
+    <link rel="icon" href="img/iconLogo.png">
 </head>
 
 <body>
