--- a/socialMasculina.html
+++ b/socialMasculina.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esportiva Masculina - Meias Sene</title>
+    <title>Social Masculina - Meias Sene</title>
     <link rel="stylesheet" href="esportvaMasc.css">
+    <link rel="icon" href="img/iconLogo.png">
 </head>
 
 <body>
